--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,18 +30,13 @@
     }
   },
   "include": [
-    "next-env.d.ts", 
-    "**/*.ts", 
-    "**/*.tsx", 
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
     ".next/types/**/*.ts",
     "**/*.test.ts",
     "**/*.test.tsx",
     "**/*.spec.ts"
   ],
-  "exclude": [
-    "node_modules",
-    ".next",
-    "out",
-    "playwright.config.ts"
-  ]
+  "exclude": ["node_modules", ".next", "out", "playwright.config.ts"]
 }
